--- a/src/scss/animations/_skeleton.scss
+++ b/src/scss/animations/_skeleton.scss
@@ -2,64 +2,65 @@
 -------------------------------------------------------------*/
 .skeleton {
   animation: skeleton-loading 1s linear infinite alternate;
+  //Animation explanation:
+  // "skeleton-loading" - name pof the animation
+  // 1s                 - duration
+  // linear             - sets how an animation progresses through the duration of each cycle
+  // infinite           - runs for ever
+  // alternate          - reverses direction each cycle
 
+  // PS: since this is a loading animation for the cards and selected game,
+  // widths and heights need to be 100%, so the loading effect covers the entire area of the elements.
+
+  // Image of the skeleton card
   &-cover {
-    width: 100%;
-    height: auto;
-    border-radius: 0.625rem;
+    width: 100%; // Horizontally fills the entire area
+    border-radius: 0.625rem; // 10px border radius
 
+    // Cover of the selected game
     &--selected {
-      width: 100%;
-      height: 100%;
-      margin-bottom: 1.5rem;
+      height: 100%; // Vertically fills the entire area
+      margin-bottom: 1.5rem; // Margin below to create more space between elements
     }
   }
 
+  // Title of the card
   &-title {
     // Layout
-    width: 100%;
-    height: auto;
-    padding: 0.5rem;
+    width: 100%; // Horizontally fills the entire area
+    padding: 0.5rem; // Padding inside the title, in every direction, making it bigger
 
     // Typography
-    color: transparent;
-    border: none !important; // Needs "!importand" to get rid of the line under title during loading
+    color: transparent; // Color of the text is transparent, so the animation doesnt have anything on top of it
   }
 
+  // Text box under the title
   &-text {
     // Layout
-    width: 100%;
-    height: auto;
+    width: 100%; // Horizontally fills the entire area
 
     // Typography
-    color: transparent;
+    color: transparent; // Color of the text is transparent, so the animation doesnt have anything on top of it
   }
 
+  // Icons at the bottom of the card component
   &__icons {
-    border: none;
-    height: auto;
-    padding: 1.75rem;
+    border: none; // Removes the border from the icons (blue line above it)
+    padding: 1.75rem; // Padding inside the title, in every direction, making it bigger
 
+    // Individual icons
     img {
-      display: none;
-    }
-  }
-
-  &__grid {
-    div {
-      width: 100%;
-      height: 4rem;
+      display: none; // Hiding them during the loading animation
     }
   }
 }
 
-/* Loading animation keyframes
-----------------------------*/
+// Controlling steps of the animation, by defining keyframes
 @keyframes skeleton-loading {
   0% {
-    background-color: #808080;
+    background-color: #808080; // Color of the animation at the start
   }
   100% {
-    background-color: #cfcfcf;
+    background-color: #cfcfcf; // Color of the animation at the end
   }
 }
