--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -37,51 +37,60 @@ $breakpoint-xlarge: '(max-width: 74.99em)';
 $breakpoint-xxlarge: '(max-width: 87.5em)';
 
 body {
-  color: var(--main-white);
-  font-family: var(--main-font);
-  background-color: var(--bg-color);
-  margin-left: 17rem;
+  color: var(--main-white); // Setting the main color for the fonts
+  font-family: var(--main-font); // Setting the font
+  background-color: var(--bg-color); // Setting the background color
+  margin-left: 17rem; // Extra spacing on the left side for the sidebar component
 
   @media #{$breakpoint-large} {
-    margin-left: 0;
+    margin-left: 0; // At 1200px maxscreen width the margin is removed
   }
 }
 
+// Tag that makes an element text bold
+strong {
+  font-weight: 700; // Text boldiness set to 700
+}
+
+// Class name used for the bigger profile image
 .aspect-ratio {
-  width: 100%;
+  width: 100%; // Horizontally fills the entire area
   padding-top: 100%; /* 1:1 Aspect Ratio */
   position: relative; /* If you want text inside of it */
   margin: 0 auto;
 
   // container for the content inside
   div {
-    position: absolute;
+    position: absolute; // The element is removed from the normal document flow
+
+    // Setting the position of the div
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+    //
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 100%; // Horizontally fills the entire area
+      height: 100%; // Vertically fills the entire area
 
-      object-fit: cover;
-      object-position: center center;
+      object-fit: cover; // To maintain its aspect ratio while filling the element's entire content box
+      object-position: center center; // Positions the element in the center vertically and horizontally
     }
   }
 }
 
+// Main button styles
 .btn-primary {
   background: linear-gradient(#7800c6, #7000ff) padding-box,
-    linear-gradient(#7800c6, #7000ff) border-box;
-  border-radius: 1.5rem;
-  align-self: center;
-  margin: 0 0.4rem;
+    linear-gradient(#7800c6, #7000ff) border-box; // Gradient background color
+  border-radius: 1.5rem; // 24px border radius
+  margin: 0 0.4rem; // Margin on the left and right side, to give it extra space
 }
 
+// Secondary button styles
 .btn-secondary {
-  border: 2px solid var(--purp-hl);
-  border-radius: 1.5rem;
-  align-self: center;
-  margin: 0 0.4rem;
+  border: 2px solid var(--purp-hl); // 2px border around the button
+  border-radius: 1.5rem; // 24px border radius
+  margin: 0 0.4rem; // Margin on the left and right side, to give it extra space
 }
