--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -1,28 +1,34 @@
 /* Filter component
 ------------------*/
 .filter {
-  margin: 1.25rem 5rem;
+  margin: 1.25rem 5rem; // Spacing around the component
 
+  // Filter button title
   h2 {
-    font-size: 2rem;
-    font-weight: 700;
+    // Typo
+    font-size: 2rem; // Setting the size of the text
+    font-weight: 700; // Setting the boldiness of the text
   }
 
+  // Container that contains the filtering buttons
   &__hashtag {
-    display: flex;
-    flex-direction: row;
+    display: flex; // Activate flexbox
+    flex-direction: row; // Setting the buttons in a row next to each other
 
+    // Button container styles for max screen width 576px
     @media #{$breakpoint-mobile-landscape} {
-      flex-direction: column;
-      align-items: flex-start;
+      flex-direction: column; // Setting the buttons in a column, under each other
+      align-items: flex-start; // Aligning items at the start (left side)
     }
   }
 
+  // Filter container styles for max screen width 576px
   @media #{$breakpoint-mobile-landscape} {
-    margin: 0 2.5rem 0 3.125rem;
+    margin: 0 2.5rem 0 3.125rem; // Removing some spacing
   }
 
+  // Filter container styles for max screen width 428px
   @media #{$breakpoint-mobile-portrait} {
-    margin: 0 1.25rem 0 2.5rem;
+    margin: 0 1.25rem 0 2.5rem; // Removing some spacing
   }
 }
