--- a/src/scss/components/_filterbutton.scss
+++ b/src/scss/components/_filterbutton.scss
@@ -1,13 +1,13 @@
 /*Filter button component
 ---------*/
 .filter__btn {
-  margin: 1.25rem 1.25rem 0 0;
-  padding: 0.625rem 1.25rem;
-  border-radius: 0.625rem;
-  font-weight: 600;
+  margin: 1.25rem 1.25rem 0 0; // Extra space around the button
+  padding: 0.625rem 1.25rem; // Spacing inside the button
+  border-radius: 0.625rem; // 10px border radius
+  font-weight: 600; // Button text boldiness
 
   // Styles for button that has been clicked on
   &--active {
-    background-color: var(--title-bg);
+    background-color: var(--title-bg); // Chancing background color
   }
 }
