--- a/src/scss/components/_profile.scss
+++ b/src/scss/components/_profile.scss
@@ -1,66 +1,71 @@
 /* Profile page component
 -----------------------*/
 .profile {
-  display: grid;
-  grid-template-columns: 3fr 8fr 1fr;
-  gap: 30px 30px;
-  grid-auto-flow: row;
+  display: grid; // Activate grid
+  grid-template-columns: 3fr 8fr 1fr; // Spacing for the grid cells, 3 in a row, fr = =equal units
+  gap: 30px 30px; // Colunm and row gap
+  margin: 7rem 5rem; // Extra spacing
 
-  margin: 7rem 5rem;
-
+  //Styles for avatar status
   &__status {
     width: 3.5rem;
-    border-radius: 50%;
-    position: relative;
+    border-radius: 50%; // Round corners
+    position: relative; // Positioned according to the normal flow of the document, and then offset relative to itself based on the values of top, right, bottom, and left
 
+    // Pseudo element, to create the offline/online status dot on the image
     &--online::before {
-      position: absolute;
-      content: '';
-      background-color: #26b119;
-      border-radius: 50%;
+      position: absolute; // Element is removed from the normal document flow
+      content: ''; // Replaces element with a generated value
+      background-color: #26b119; // Background color of the status
+      border-radius: 50%; // Round corners
       width: 0.5rem;
       height: 0.5rem;
-      pointer-events: none;
-      inset: auto 5px 5px auto;
+      inset: auto 5px 5px auto; // Places it in the bottom right edge of the image
     }
 
+    // Pseudo element, to create the offline/online status dot on the image
     &--offline::before {
-      position: absolute;
-      content: '';
-      background-color: #ff0000;
-      border-radius: 50%;
+      position: absolute; // Element is removed from the normal document flow
+      content: ''; // Replaces element with a generated value
+      background-color: #ff0000; // Background color of the status
+      border-radius: 50%; // Round corners
       width: 0.5rem;
       height: 0.5rem;
-      pointer-events: none;
-      inset: auto 5px 5px auto;
+      inset: auto 5px 5px auto; // Places it in the bottom right edge of the image
     }
 
+    // Image that has the status dot
     img {
       width: 3.5rem;
       height: 3.5rem;
-      object-fit: cover;
-      border-radius: 50%;
+      object-fit: cover; // Replaced content is sized to maintain its aspect ratio while filling the element's entire content box.
+      border-radius: 50%; // Round corners
     }
   }
 
+  // Styles for max screen width of 1400px
   @media #{$breakpoint-xxlarge} {
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 3fr; // Chancing girds structure
   }
 
+  // Styles for max screen width of 1200px
   @media #{$breakpoint-xlarge} {
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 2fr 3fr; // Chancing girds structure
   }
 
+  // Styles for max screen width of 1000px
   @media #{$breakpoint-large} {
-    margin: 10rem 5rem;
-    grid-template-columns: 1fr;
+    margin: 10rem 5rem; // Changing spacing
+    grid-template-columns: 1fr; // Chancing girds structure, now all in 1 column
   }
 
+  // Styles for max screen width of 1000px
   @media #{$breakpoint-mobile-landscape} {
-    margin: 10rem 2.5rem 7rem 3.125rem;
+    margin: 10rem 2.5rem 7rem 3.125rem; // Changing spacing
   }
 
+  // Styles for max screen width of 1400px
   @media #{$breakpoint-mobile-portrait} {
-    margin: 10rem 0.625rem 7rem 2.5rem;
+    margin: 10rem 0.625rem 7rem 2.5rem; // Changing spacing
   }
 }
